# MoPBlacklistBot

./: README.md  blacklist.json  blacklistignore.json  pyproject.toml  run.py  weakaura.lua
mopblacklistbot/: _types.py  bot.py  weakaura.py
tests/: test_mopblacklistbot.py
